--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,23 @@
 [package]
 name = "tauri-plugin-macos-permissions"
-version = "2.3.0"
-authors = [ "ayangweb" ]
+version = "0.1.0"
+authors = [ "me" ]
 description = "Support for checking and requesting macos system permissions."
-repository = "https://github.com/ayangweb/tauri-plugin-macos-permissions"
-keywords = ["tauri-plugin", "macos-permissions", "accessibility", "full-disk-access", "screen-recording"]
 license = "MIT"
 edition = "2021"
 rust-version = "1.77.2"
-exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
+exclude = ["/webview-dist", "/webview-src", "/node_modules"]
 links = "tauri-plugin-macos-permissions"
 
 [dependencies]
-tauri = { version = "2" }
-serde = "1"
-thiserror = "2"
+tauri.workspace = true
+serde.workspace = true
+thiserror.workspace = true
 
 [build-dependencies]
-tauri-plugin = { version = "2", features = ["build"] }
+tauri-plugin.workspace = true
 
 [target."cfg(target_os = \"macos\")".dependencies]
-macos-accessibility-client = "0.0.1"
-objc2 = "0.6"
-objc2-foundation = "0.3"
+macos-accessibility-client.workspace = true
+objc2.workspace = true
+objc2-foundation.workspace = true
